--- a/style.css
+++ b/style.css
@@ -2917,7 +2917,7 @@ body,
 }
 
 .login-form {
-	background-color: #ffd000;
+	background-color: #eae4c9;
 	padding: 50px 20px 15px;
 }
 
@@ -3237,4 +3237,7 @@ body,
 	bottom: 20px;
 	opacity: 1;
 	visibility: visible;
+}
+element.style {
+    color: antiquewhite;
 }
