--- a/style.css
+++ b/style.css
@@ -3241,3 +3241,34 @@ body,
 element.style {
     color: antiquewhite;
 }
+.carr{
+/*	display: inline-block;*/
+ /*   max-width: 100%;*/
+    height: calc(2.25rem + 2px);
+    padding: .505rem 26.75rem .375rem .75rem;
+    line-height: 1.5;
+    color: #495057;
+    vertical-align: middle;
+    background-size: 8px 10px;
+    border: 1px solid #ced4da;
+    border-radius: .40rem;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+}
+.carrr{
+/*	display: inline-block;*/
+ /*   max-width: 100%;*/
+    height: calc(2.25rem + 2px);
+    padding: .505rem 23.75rem .375rem .75rem;
+    line-height: 1.5;
+    color: #495057;
+    vertical-align: middle;
+    background-size: 8px 10px;
+    border: 1px solid #ced4da;
+    border-radius: .40rem;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+}
+}
