--- a/style.css
+++ b/style.css
@@ -3245,7 +3245,7 @@ element.style {
 /*	display: inline-block;*/
  /*   max-width: 100%;*/
     height: calc(2.25rem + 2px);
-    padding: .505rem 26.75rem .375rem .75rem;
+    padding: .505rem 22.90rem .375rem .75rem;
     line-height: 1.5;
     color: #495057;
     vertical-align: middle;
@@ -3257,6 +3257,66 @@ element.style {
     appearance: none;
 }
 .carrr{
+/*	display: inline-block;*/
+ /*   max-width: 100%;*/
+    height: calc(2.25rem + 2px);
+    padding: .505rem 23.60rem .375rem .75rem;
+    line-height: 1.5;
+    color: #495057;
+    vertical-align: middle;
+    background-size: 8px 10px;
+    border: 1px solid #ced4da;
+    border-radius: .40rem;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+}
+.route{
+/*	display: inline-block;*/
+ /*   max-width: 100%;*/
+    height: calc(2.25rem + 2px);
+    padding: .505rem 23.75rem .375rem .75rem;
+    line-height: 1.5;
+    color: #495057;
+    vertical-align: middle;
+    background-size: 8px 10px;
+    border: 1px solid #ced4da;
+    border-radius: .40rem;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+}
+.route1{
+/*	display: inline-block;*/
+ /*   max-width: 100%;*/
+    height: calc(2.25rem + 2px);
+    padding: .505rem 23.75rem .375rem .75rem;
+    line-height: 1.5;
+    color: #495057;
+    vertical-align: middle;
+    background-size: 8px 10px;
+    border: 1px solid #ced4da;
+    border-radius: .40rem;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+}
+.route2{
+/*	display: inline-block;*/
+ /*   max-width: 100%;*/
+    height: calc(2.25rem + 2px);
+    padding: .505rem 23.75rem .375rem .75rem;
+    line-height: 1.5;
+    color: #495057;
+    vertical-align: middle;
+    background-size: 8px 10px;
+    border: 1px solid #ced4da;
+    border-radius: .40rem;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+}
+.route3{
 /*	display: inline-block;*/
  /*   max-width: 100%;*/
     height: calc(2.25rem + 2px);
