--- a/agent/assets/css/style.css
+++ b/agent/assets/css/style.css
@@ -4141,3 +4141,95 @@ table.table-inbox tbody tr.checked {
 		display: none;
 	}
 }
+.carr{
+/*	display: inline-block;*/
+ /*   max-width: 100%;*/
+    height: calc(2.25rem + 2px);
+    padding: .505rem 5rem .375rem .75rem;
+    line-height: 1.5;
+    color: #495057;
+    vertical-align: middle;
+    background-size: 8px 10px;
+    border: 1px solid #ced4da;
+    border-radius: .40rem;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+}
+.carrr{
+/*	display: inline-block;*/
+ /*   max-width: 100%;*/
+    height: calc(2.25rem + 2px);
+    padding: .505rem 6.50rem .375rem .75rem;
+    line-height: 1.5;
+    color: #495057;
+    vertical-align: middle;
+    background-size: 8px 10px;
+    border: 1px solid #ced4da;
+    border-radius: .40rem;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+}
+.route{
+/*	display: inline-block;*/
+ /*   max-width: 100%;*/
+    height: calc(2.25rem + 2px);
+    padding: .505rem  6.50rem .375rem .75rem;
+    line-height: 1.5;
+    color: #495057;
+    vertical-align: middle;
+    background-size: 8px 10px;
+    border: 1px solid #ced4da;
+    border-radius: .40rem;
+
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+}
+
+.route1{
+/*	display: inline-block;*/
+ /*   max-width: 100%;*/
+    height: calc(2.25rem + 2px);
+    padding: .505rem 6.50rem .375rem .75rem;
+    line-height: 1.5;
+    color: #495057;
+    vertical-align: middle;
+    background-size: 8px 10px;
+    border: 1px solid #ced4da;
+    border-radius: .40rem;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+}
+.route2{
+/*	display: inline-block;*/
+ /*   max-width: 100%;*/
+    height: calc(2.25rem + 2px);
+    padding: .505rem 6.50rem .375rem .75rem;
+    line-height: 1.5;
+    color: #495057;
+    vertical-align: middle;
+    background-size: 8px 10px;
+    border: 1px solid #ced4da;
+    border-radius: .40rem;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+}
+.route3{
+/*	display: inline-block;*/
+ /*   max-width: 100%;*/
+    height: calc(2.25rem + 2px);
+    padding: .505rem 6.50rem .375rem .75rem;
+    line-height: 1.5;
+    color: #495057;
+    vertical-align: middle;
+    background-size: 8px 10px;
+    border: 1px solid #ced4da;
+    border-radius: .40rem;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+}
